[gd_scene load_steps=14 format=3 uid="uid://b0exmhh0wrc71"]

[ext_resource type="Script" uid="uid://dt70ctfgbhccq" path="res://Scripts/game.gd" id="1_ldgsr"]
[ext_resource type="PackedScene" uid="uid://p18te3mbptsf" path="res://Scenes/ui_scenes/hud.tscn" id="2_o5yvi"]
[ext_resource type="PackedScene" uid="uid://boyb8u6vpyi2r" path="res://Scenes/ui_scenes/pause_screen.tscn" id="2_rku1e"]
[ext_resource type="PackedScene" uid="uid://dbr0we6yg5x5p" path="res://Scenes/player.tscn" id="3_rku1e"]
[ext_resource type="PackedScene" uid="uid://b4yxq42ixguqi" path="res://Scenes/asteroid_spawner.tscn" id="4_rfjv2"]
[ext_resource type="Texture2D" uid="uid://ddpbjro4paqh5" path="res://Sprites/planets/planet1.png" id="5_1phco"]
[ext_resource type="Texture2D" uid="uid://b82ihy1v4diwy" path="res://Sprites/planets/planet2.png" id="6_nb51f"]
[ext_resource type="Texture2D" uid="uid://c2tulxfj0l8sw" path="res://Sprites/planets/planet3.png" id="7_nnt18"]
[ext_resource type="Texture2D" uid="uid://b33kbc07wl0qu" path="res://Sprites/planets/planet4.png" id="8_ewbju"]
[ext_resource type="Texture2D" uid="uid://bfk2xf4evjd8o" path="res://Sprites/planets/planet5.png" id="9_85qyi"]
[ext_resource type="Texture2D" uid="uid://t5ywt6qdi160" path="res://Sprites/planets/planet6.png" id="10_iivbl"]
[ext_resource type="PackedScene" uid="uid://rbqptld2emug" path="res://Scenes/enemy_spawner.tscn" id="10_o5yvi"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_o5yvi"]
parsed_collision_mask = 4294967061

[node name="game" type="Node2D"]
script = ExtResource("1_ldgsr")

[node name="pause_screen" parent="." instance=ExtResource("2_rku1e")]

[node name="hud" parent="." instance=ExtResource("2_o5yvi")]

[node name="level_planets" type="Node2D" parent="."]

[node name="level1_planets" type="Node2D" parent="level_planets"]
visible = false

[node name="planet1" type="Sprite2D" parent="level_planets/level1_planets"]
modulate = Color(0.4506483, 0.4506483, 0.45064825, 1)
z_index = -94
position = Vector2(385.00006, 704.00006)
rotation = 0.45727625
scale = Vector2(0.3375, 0.3375)
texture = ExtResource("5_1phco")

[node name="planet2" type="Sprite2D" parent="level_planets/level1_planets"]
modulate = Color(0.32544068, 0.32544097, 0.32544082, 1)
z_index = -101
position = Vector2(632.99994, 824.00006)
rotation = 0.6859144
scale = Vector2(0.056250002, 0.056250002)
texture = ExtResource("6_nb51f")

[node name="level2_planets" type="Node2D" parent="level_planets"]
visible = false

[node name="planet3" type="Sprite2D" parent="level_planets/level2_planets"]
modulate = Color(0.7204674, 0.7204675, 0.7204674, 1)
z_index = -94
position = Vector2(1576, 751.00006)
scale = Vector2(0.33906236, 0.33906236)
texture = ExtResource("7_nnt18")

[node name="planet4" type="Sprite2D" parent="level_planets/level2_planets"]
modulate = Color(0.86898494, 0.8689849, 0.8689849, 1)
z_index = -94
position = Vector2(311, 271)
scale = Vector2(0.18125, 0.18125)
texture = ExtResource("8_ewbju")

[node name="planet5" type="Sprite2D" parent="level_planets/level2_planets"]
modulate = Color(0.5211406, 0.52114064, 0.52114046, 1)
z_index = -101
position = Vector2(170, 185)
scale = Vector2(0.06718748, 0.06718748)
texture = ExtResource("9_85qyi")

[node name="level3_planets" type="Node2D" parent="level_planets"]
visible = false

[node name="planet6" type="Sprite2D" parent="level_planets/level3_planets"]
modulate = Color(0.51761866, 0.5851272, 0.29984733, 1)
z_index = -94
position = Vector2(1850, 67)
scale = Vector2(0.27968735, 0.27968735)
texture = ExtResource("10_iivbl")

[node name="nav_rebake_timer" type="Timer" parent="."]
wait_time = 0.06
autostart = true

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_o5yvi")

[node name="asteroid_spawner" parent="NavigationRegion2D" instance=ExtResource("4_rfjv2")]

[node name="enemy_spawner" parent="NavigationRegion2D" instance=ExtResource("10_o5yvi")]

[node name="player_items" type="Node2D" parent="NavigationRegion2D" groups=["player"]]

[node name="player" parent="NavigationRegion2D/player_items" instance=ExtResource("3_rku1e")]
position = Vector2(960, 540)
rotation = -1.5707964
scale = Vector2(0.7999999, 0.7999999)

[connection signal="timeout" from="nav_rebake_timer" to="." method="_on_nav_rebake_timer_timeout"]
[connection signal="bake_finished" from="NavigationRegion2D" to="." method="_on_navigation_region_2d_bake_finished"]
